parser/tests/good/abs.st
function abs(n: int): int
  if n < 0 then
    result -n
  end if
  result +n
end abs
