parser/tests/bad/stmt04.st
% 'function' call cannot be a statement

function f(): int
  result 0
end f

f()
